--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,11 +6,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | Marmot Ajax 3 person tent</title>
+    <title>Sleep Outside | Our Product</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
-    <script src="../js/product.js" type="module"></script>
+    <script src="../js/product.js" type="module" defer></script>
   </head>
 
   <body>
