modified href header footer

--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 
 <html lang="en">
-  
   <head>
     <meta charset="UTF-8" />
 
@@ -14,8 +13,7 @@
   </head>
 
   <body>
-    <header id="main-header" class="divider">      
-    </header>
+    <header id="main-header" class="divider"></header>
 
     <main class="divider">
       <section class="products">
@@ -24,7 +22,5 @@
     </main>
 
     <footer id="main-footer"></footer>
-
   </body>
-
 </html>
