--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 
 <html lang="en">
-  
   <head>
     <meta charset="UTF-8" />
 
@@ -15,13 +14,10 @@
   </head>
 
   <body>
-    <header id="main-header" class="divider">
-
-    </header>
+    <header id="main-header" class="divider"></header>
 
     <main class="divider"></main>
 
     <footer id="main-footer"></footer>
   </body>
-
 </html>
