fix product detail page

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         </p>
       </section>
       <section class="products-listing">
-        <div class="grid">
+        <div class="products-grid">
           <div class="tents">
             <a href="product-listing/index.html?category=tents">
               <img
