fix build issue due to css for elements not yet built

--- a/src/index.html
+++ b/src/index.html
@@ -33,40 +33,40 @@
       </section>
       <div class="grid-container">
         <figure class="grid-box">
-          <a href="./product-listing/index.html?category=tents">
+          <a href="/product-listing/index.html?category=tents">
             <img
               id="tents"
-              src="./images/tents.svg"
+              src="/images/tents.svg"
               alt="Tent Icon from Noun Project: Mustofa Bayu"
             />
           </a>
           <figcaption>Tents</figcaption>
         </figure>
         <figure class="grid-box">
-          <a href="./product-listing/index.html?category=backpacks">
+          <a href="/product-listing/index.html?category=backpacks">
             <img
               id="backpacks"
-              src="./images/backpacks.svg"
+              src="/images/backpacks.svg"
               alt="Backpack Icon from Noun Project: Mustofa Bayu"
             />
           </a>
           <figcaption>Backpacks</figcaption>
         </figure>
         <figure class="grid-box">
-          <a href="./product-listing/index.html?category=sleeping-bags">
+          <a href="/product-listing/index.html?category=sleeping-bags">
             <img
               id="sleeping-bags"
-              src="./images/sleeping-bags.svg"
+              src="/images/sleeping-bags.svg"
               alt="Sleeping Bag Icon from Noun Project: Mustofa Bayu"
             />
           </a>
           <figcaption>Sleeping Bags</figcaption>
         </figure>
         <figure class="grid-box">
-          <a href="./product-listing/index.html?category=hammocks">
+          <a href="/product-listing/index.html?category=hammocks">
             <img
               id="hammocks"
-              src="./images/hammocks.svg"
+              src="/images/hammocks.svg"
               alt="Hammock Icon from Noun Project: Paul Richard"
             />
           </a>
