--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -8,7 +8,7 @@
 
     <title>Sleep Outside | Checkout</title>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <script src="../js/checkout.js" type="module"></script>
   </head>
 
@@ -18,7 +18,40 @@
     <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
+        <form name="checkout-form" id="checkout-form">
+          <fieldset>Customer Name</fieldset>
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="fname" required />
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lname" required />
+          <fieldset>Address</fieldset>
+            <label for="address">Street Address</label>
+            <input type="text" id="address" name="address" required />
+            <label for="street">Street Address</label>
+            <input type="text" id="street" name="street" required />
+            <label for="city">City</label>
+            <input type="text" id="city" name="city" required />
+            <label for="state">State</label>
+            <input type="text" id="state" name="state" required />
+            <label for="zip">Zip Code</label>
+            <input id="zip" name="zip" required />
+          <fieldset>Payment</fieldset>
+            <label for="card">Credit Card Number</label>
+            <input id="card" name="card" required />
+            <label for="exp">Expiration Date</label>
+            <input id="exp" name="exp" required />
+            <label for="code">CVV</label>
+            <input id="code" name="code" required />
+          <button id="checkout-button" type="submit">Place Order</button>
       </section>
+      <section id="order-summary">
+        <h2>Order Summary</h2>
+        <p>Subtotal: <span id="subtotal"></span></p>
+        <p>Shipping Estimate: <span id="shipping-estimate">$0.00</span></p>
+        <p>Tax: <span id="tax">$0.00</span></p>
+        <p>Order Total: <span id="order-total">$0.00</span></p>
+        </section>
+      </form>
     </main>
 
     <footer id="main-footer"></footer>
