--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -54,7 +54,8 @@
         </ul>
       </section>
       <div class="cart-footer" hidden></div>
-      <button class="checkout-button" hidden>Checkout</button>
+      <div class="checkout-button" hidden><button>Checkout</button></div>
+
     </main>
 
     <footer id="main-footer"></footer>
