--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -24,23 +24,52 @@
             <label for="fname" class="top">First Name</label>
             <input type="text" id="fname" name="fname" value="John" required />
             <label for="lname" class="top">Last Name</label>
-            <input type="text" id="lname" name="lname" value="Spencer" required />
+            <input
+              type="text"
+              id="lname"
+              name="lname"
+              value="Spencer"
+              required
+            />
           </fieldset>
           <fieldset>
             <legend>Address</legend>
             <label for="street" class="top">Street Address</label>
-            <input type="text" id="street" name="street" value="123 Main Street" required />
+            <input
+              type="text"
+              id="street"
+              name="street"
+              value="123 Main Street"
+              required
+            />
             <label for="city" class="top">City</label>
-            <input type="text" id="city" name="city" value="Los Angeles" required />
+            <input
+              type="text"
+              id="city"
+              name="city"
+              value="Los Angeles"
+              required
+            />
             <label for="state" class="top">State</label>
-            <input type="text" id="state" name="state" value="California" required />
+            <input
+              type="text"
+              id="state"
+              name="state"
+              value="California"
+              required
+            />
             <label for="zip" class="top">Zip Code</label>
             <input id="zip" name="zip" required />
           </fieldset>
           <fieldset>
             <legend>Payment</legend>
             <label for="cardNumber" class="top">Credit Card Number</label>
-            <input id="cardNumber" name="cardNumber" value="1234123412341234" required />
+            <input
+              id="cardNumber"
+              name="cardNumber"
+              value="1234123412341234"
+              required
+            />
             <label for="expiration" class="top">Expiration Date</label>
             <input id="expiration" name="expiration" value="12/25" required />
             <label for="code" class="top">Security Code</label>
