--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -22,44 +22,20 @@
           <fieldset>
             <legend>Customer Name</legend>
             <label for="fname" class="top">First Name</label>
-            <input type="text" id="fname" name="fname" value="John" required />
+            <input type="text" id="fname" name="fname" required />
             <label for="lname" class="top">Last Name</label>
-            <input
-              type="text"
-              id="lname"
-              name="lname"
-              value="Spencer"
-              required
-            />
+            <input type="text" id="lname" name="lname" required />
           </fieldset>
           <fieldset>
             <legend>Address</legend>
             <label for="street" class="top">Street Address</label>
-            <input
-              type="text"
-              id="street"
-              name="street"
-              value="123 Main Street"
-              required
-            />
+            <input type="text" id="street" name="street" required />
             <label for="city" class="top">City</label>
-            <input
-              type="text"
-              id="city"
-              name="city"
-              value="Los Angeles"
-              required
-            />
+            <input type="text" id="city" name="city" required />
             <label for="state" class="top">State</label>
-            <input
-              type="text"
-              id="state"
-              name="state"
-              value="California"
-              required
-            />
+            <input type="text" id="state" name="state" required />
             <label for="zip" class="top">Zip Code</label>
-            <input id="zip" name="zip" required />
+            <input id="zip" name="zip" pattern="\d{5}" required />
           </fieldset>
           <fieldset>
             <legend>Payment</legend>
@@ -67,13 +43,19 @@
             <input
               id="cardNumber"
               name="cardNumber"
-              value="1234123412341234"
+              pattern="\d{16}"
               required
             />
             <label for="expiration" class="top">Expiration Date</label>
-            <input id="expiration" name="expiration" value="12/25" required />
+            <input
+              id="expiration"
+              name="expiration"
+              pattern="/^(0[1-9]|1[0-2])\/\d{2}$/"
+              placeholder="MM/YY"
+              required
+            />
             <label for="code" class="top">Security Code</label>
-            <input id="code" name="code" value="123" required />
+            <input id="code" name="code" pattern="\d{3}" required />
             <button id="checkout-button" type="submit">Place Order</button>
           </fieldset>
           <section id="order-summary">
