--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="form-box">
         <form class="search-form" id="search-form">
-          <input type="search" id="search" placeholder="Search for products" />
+          <input type="search" id="search" placeholder="Search by category" />
           <button id="search-button">Search</button>
           <button id="clear-button">Clear</button>
         </form>
