--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -19,9 +19,7 @@
     <main class="divider">
       <section class="products">
         <h2>My Cart</h2>
-        <ul class="product-list">
-        
-        </ul>
+        <ul class="product-list"></ul>
       </section>
       <div class="cart-footer" hidden></div>
       <button class="checkout-button" hidden>Checkout</button>
